# UESTC-MPIEratosthenesSieve

./: CMakeLists.txt  README.md  base.cpp  optimizer1.cpp  optimizer2.cpp  optimizer3.cpp  optimizer4.cpp
.github/workflows/: cmake.yml
