cmake_minimum_required(VERSION 3.11)
project(MPI_EratosthenesSieve)
find_package(MPI REQUIRED)
set(MPI_SKIP_MPICXX true)
include_directories(${MPI_CXX_INCLUDE_DIRS})
set(MPIEXEC_PREFLAGS --allow-run-as-root --oversubscribe)

file(GLOB mains RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp")
foreach(mainfile IN LISTS mains)
    get_filename_component(mainname ${mainfile} NAME_WE)
    message("-- Build " MPI_EratosthenesSieve.${mainname})
    add_executable(MPI_EratosthenesSieve.${mainname} ${mainfile})
    target_link_libraries(MPI_EratosthenesSieve.${mainname} ${MPI_CXX_LIBRARIES})
endforeach()

enable_testing()
macro(do_test PROG PROC N)
    set(NN 1)
    set(PROCC 1)
    foreach(i RANGE 1 ${N})
        math(EXPR NN 10*${NN})
    endforeach()
    if(NOT ${PROC} EQUAL 0)
        foreach(i RANGE 1 ${PROC})
            math(EXPR PROCC 2*${PROCC})
        endforeach()
    endif()
    add_test(NAME Sieve.${PROG}_Process=2^${PROC}_N=10^${N}
            COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${PROCC} ${MPIEXEC_PREFLAGS} ./MPI_EratosthenesSieve.${PROG} ${NN})
endmacro()

foreach(n RANGE 3 9)
    foreach(program base optimizer1 optimizer2 optimizer3 optimizer4)
        foreach(p RANGE 0 4)
            do_test(${program} ${p} ${n})
        endforeach()
    endforeach()
endforeach()